fix for spacing above and below page content on mobile safari

--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -154,9 +154,7 @@
   @media (max-width: $bp-max-mobile-landscape) {
     &__content {
       background: #ffffff;
-      padding: 24px 0;
-      margin-bottom: 74px;
-      margin-top: 84px;
+      padding: 108px 0 98px;
     }
 
     &__content-container {
